Implements style fixes for the new lifefyre code, which is dumb and adds styles to the body and html tags on mobile. I hate you lifefyre.

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -39,12 +39,13 @@ body {
   position: relative;
   min-height: 100%;
   display: block;
-  padding-bottom: 200px;
+  padding-bottom: 200px !important;
+  height: auto !important;
   @media (max-width: 650px) {
-      padding-bottom: 225px;
+      padding-bottom: 225px !important;
   }
   @media (max-width: 450px) {
-      padding-bottom: 250px;
+      padding-bottom: 250px !important;
   }
 }
 ol, ul {
